--- a/sigavan/app/src/main/res/values/strings.xml
+++ b/sigavan/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="Cancelar">Cancelar</string>
     <string name="telefone">Telefone: </string>
     <string name="dicaTelefone">Insira seu telefone</string>
+
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">COMEÇAR!</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
