SigaVan with Firebase updated test (not homologated)

--- a/sigavan_version2/app/src/main/res/values/strings.xml
+++ b/sigavan_version2/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">sigavan_version2</string>
+    <string name="app_name">sigavan_2</string>
+    <string name="icone">Icone do Aplicativo</string>
 </resources>
