terminado completar cadastro

--- a/sigavan/app/src/main/res/values/strings.xml
+++ b/sigavan/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="noite">Noite</string>
 
     //Cadastrar Passageiro
+    <string name="cadastrar_passageiro">Cadastrar Passageiro</string>
     <string name="dicaEmailPassageiro">Insira o email do passageiro</string>
     <string name="faculdade">Faculdade: </string>
     <string name="email">Email: </string>
