Atualização no layout de completar cadastro e ajustado algumas strings

--- a/sigavan/app/src/main/res/values/strings.xml
+++ b/sigavan/app/src/main/res/values/strings.xml
@@ -53,5 +53,6 @@
     <string name="dialog_mensagem">Gostaria continuar adicionando passageiros?</string>
 
     //Completar Cadastro Passageiro
-    <string name="completar_cadastro">Selecione os Dias da Semana Que Você Tem Aula</string>
+    <string name="completar_cadastro">Completando seu cadastro</string>
+    <string name="dias_aula">Selecione os dias da semana que você tem aula:</string>
 </resources>
