--- a/sigavan/app/src/main/res/values/strings.xml
+++ b/sigavan/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="dicaTelefone">55999999999</string>
     <string name="placeholder">placeholder</string>
     <string name="errocadastro">Dados preenchidos corretamente. Por favor, preencha o número de telefone e o modo de uso corretamente.</string>
+    <string name="carregando">Carregando...</string>
 
     //FULLSCREEN ACTIVITY
     <string name="title_activity_fullscreen">FullscreenActivity</string>
